--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "test": "test",
-    "start": ""
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -13,5 +13,9 @@
   },
   "author": "Adilet Kamchibekov, Askar Sydykakparov",
   "license": "ISC",
-  "homepage": "https://bitbucket.org/bifire/instagram#readme"
+  "homepage": "https://bitbucket.org/bifire/instagram#readme",
+  "dependencies": {
+    "express": "^4.16.3",
+    "liquidjs": "^4.0.0"
+  }
 }
